Fixed fear of type not working

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -5,16 +5,17 @@
     name=last_breath
     id=nfwme_store_variables
     first_time_only=no
+    {CLEAR_VARIABLE nfw_unit_type,nfw_second_unit_type,nfw_weapon_type,nfw_scary_weapon,nfw_scary_weapon_translated}
     {VARIABLE nfw_weapon_type $second_weapon.type}
     {VARIABLE nfw_scary_weapon $second_weapon.name}
     {VARIABLE nfw_scary_weapon_translated $second_weapon.description}
     [store_unit_type]
         type=$unit.type
-        variable=nfwe_unit_type
+        variable=nfw_unit_type
     [/store_unit_type]
     [store_unit_type]
         type=$second_unit.type
-        variable=nfwe_second_unit_type
+        variable=nfw_second_unit_type
     [/store_unit_type]
 [/event]
 
@@ -423,8 +424,8 @@
             value=7
             [if]
                 {NFW_undead_ENABLED}
-                {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
-                {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
+                {VARIABLE_CONDITIONAL nfw_unit_type.movement_type not_equals undeadspirit}
+                {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_magical}
                 [and]
                     [not]
                         [have_location]
@@ -441,8 +442,8 @@
                 [/then]
                 [elseif]
                     {NFW_undead_ENABLED}
-                    {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
-                    {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
+                    {VARIABLE_CONDITIONAL nfw_unit_type.movement_type not_equals undeadspirit}
+                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_magical}
                     [and]
                         [not]
                             [have_location]
@@ -500,7 +501,7 @@
     [filter_condition]
         {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
         {NFW_elemental_ENABLED}
-        {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
+        {VARIABLE_CONDITIONAL nfw_unit_type.movement_type not_equals undeadspirit}
     [/filter_condition]
     [filter]
 #ifdef CAMPAIGN_NORTHERN_REBIRTH
@@ -1142,7 +1143,7 @@
                                 [/have_location]
                             [/not]
                             [not]
-                                {VARIABLE_CONDITIONAL nfwe_unit_type.undead_variation equals swimmer}
+                                {VARIABLE_CONDITIONAL nfw_unit_type.undead_variation equals swimmer}
                             [/not]
                             [not]
                                 [have_location]
@@ -1191,7 +1192,7 @@
                                     [/filter]
                                 [/have_location]
                                 [or]
-                                    {VARIABLE_CONDITIONAL nfwe_unit_type.undead_variation equals swimmer}
+                                    {VARIABLE_CONDITIONAL nfw_unit_type.undead_variation equals swimmer}
                                 [/or]
                                 [or]
                                     [have_location]
@@ -1411,7 +1412,7 @@
                             [/filter]
                         [/have_location]
                         [or]
-                            {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type equals undeadspirit}
+                            {VARIABLE_CONDITIONAL nfw_unit_type.movement_type equals undeadspirit}
                         [/or]
                         [else]
                             {NFW_broken_arm_WOUND}
@@ -1478,7 +1479,7 @@
                             [/have_location]
                         [/or]
                         [or]
-                            {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type equals undeadspirit}
+                            {VARIABLE_CONDITIONAL nfw_unit_type.movement_type equals undeadspirit}
                         [/or]
                         [else]
                             {NFW_broken_leg_WOUND}
@@ -1490,8 +1491,8 @@
                     value=33,34,35
                     [if]
                         {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
-                        {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
-                        {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
+                        {VARIABLE_CONDITIONAL nfw_unit_type.movement_type not_equals undeadspirit}
+                        {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_magical}
                         [and]
                             [not]
                                 [have_location]
@@ -1511,8 +1512,8 @@
                 [case]
                     value=36
                     [if]
-                        {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
-                        {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
+                        {VARIABLE_CONDITIONAL nfw_unit_type.movement_type not_equals undeadspirit}
+                        {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_magical}
                         [and]
                             [not]
                                 [have_location]
@@ -1820,13 +1821,13 @@
                         [/have_location]
                         [or]
                             [variable]
-                                name=nfwe_second_unit_type
+                                name=nfw_second_unit_type.id
                                 equals=$nfw_empty_var
                             [/variable]
                         [/or]
                         [or]
                             [variable]
-                                name=nfwe_second_unit_type.name
+                                name=nfw_second_unit_type.name
                                 equals=$nfw_empty_var
                             [/variable]
                         [/or]
