--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -471,7 +471,7 @@ Face your fears and defeat them to try to overcome them."
                     [display]
                         id=nfw_scared_of_type
                         name="<span color='#DA0000'>"+_"weakness"+"</span>"
-                        description=_"-50% strikes and -30% accuracy when facing a $nfwe_second_unit_type.name|.
+                        description=_"-50% strikes and -30% accuracy when facing a $nfw_second_unit_type.name|.
 Face your fears and defeat them to try to overcome them."
                     [/display]
                 [/abilities]
@@ -483,14 +483,14 @@ Face your fears and defeat them to try to overcome them."
                     [attacks]
                         id=nfw_scared_of_type_attacks
                         [filter_opponent]
-                            type=$nfwe_second_unit_type.id
+                            type=$nfw_second_unit_type.id
                         [/filter_opponent]
                         divide=2
                     [/attacks]
                     [chance_to_hit]
                         id=nfw_scared_of_type_chance
                         [filter_opponent]
-                            type=$nfwe_second_unit_type.id
+                            type=$nfw_second_unit_type.id
                         [/filter_opponent]
                         sub=30
                     [/chance_to_hit]
@@ -499,15 +499,15 @@ Face your fears and defeat them to try to overcome them."
         [/object]
         [set_variable]
             name=scary_type
-            value=$nfwe_second_unit_type.id
+            value=$nfw_second_unit_type.id
         [/set_variable]
         [set_variable]
             name=scary_type_translated
-            value=$nfwe_second_unit_type.name
+            value=$nfw_second_unit_type.name
         [/set_variable]
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Scared of $nfwe_second_unit_type.name" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Scared of $nfw_second_unit_type.name" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
