--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -60,16 +60,17 @@
         id=Sister Thera,Father Morvin
         formula=hitpoints < 1
     [/filter]
+    {CLEAR_VARIABLE nfw_unit_type,nfw_second_unit_type,nfw_weapon_type,nfw_scary_weapon,nfw_scary_weapon_translated}
     {VARIABLE nfw_scary_weapon $second_weapon.name}
     {VARIABLE nfw_weapon_type $second_weapon.type}
     {VARIABLE nfw_scary_weapon_translated $second_weapon.description}
     [store_unit_type]
         type=$unit.type
-        variable=nfwe_unit_type
+        variable=nfw_unit_type
     [/store_unit_type]
     [store_unit_type]
         type=$second_unit.type
-        variable=nfwe_second_unit_type
+        variable=nfw_second_unit_type
     [/store_unit_type]
     [if]
         {NFW_wounds_DISABLED}
@@ -104,16 +105,17 @@
         id=Sister Thera,Father Morvin
         formula=$second_unit.hitpoints < 1
     [/filter_second]
+    {CLEAR_VARIABLE nfw_unit_type,nfw_second_unit_type,nfw_weapon_type,nfw_scary_weapon,nfw_scary_weapon_translated}
     {VARIABLE nfw_scary_weapon $weapon.name}
     {VARIABLE nfw_weapon_type $weapon.type}
     {VARIABLE nfw_scary_weapon_translated $second_weapon.description}
     [store_unit_type]
         type=$unit.type
-        variable=nfwe_unit_type
+        variable=nfw_unit_type
     [/store_unit_type]
     [store_unit_type]
         type=$second_unit.type
-        variable=nfwe_second_unit_type
+        variable=nfw_second_unit_type
     [/store_unit_type]
     [if]
         {NFW_wounds_DISABLED}
