--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -165,7 +165,7 @@
             [if]
                 [variable]
                     name=unit.name
-                    equals=$nfwe_unit_type.name
+                    equals=$nfw_unit_type.name
                 [/variable]
                 [then]
                     [message]
@@ -177,15 +177,15 @@
                 [/then]
                 [elseif]
                     [variable]
-                        name=nfwe_unit_type.female.name
+                        name=nfw_unit_type.female.name
                         equals=$nfw_empty_var
                     [/variable]
                     [then]
                         [message]
                             speaker=$unit.id
                             side_for=$unit.side
-                            message= _ "$unit.name a $nfwe_unit_type.name died."
-                            female_message= _ "female^$unit.name a $nfwe_unit_type.name died."
+                            message= _ "$unit.name a $nfw_unit_type.name died."
+                            female_message= _ "female^$unit.name a $nfw_unit_type.name died."
                         [/message]
                     [/then]
                 [/elseif]
@@ -193,8 +193,8 @@
                     [message]
                         speaker=$unit.id
                         side_for=$unit.side
-                        message= _ "$unit.name a $nfwe_unit_type.name died."
-                        female_message= _ "female^$unit.name a $nfwe_unit_type.female.name died."
+                        message= _ "$unit.name a $nfw_unit_type.name died."
+                        female_message= _ "female^$unit.name a $nfw_unit_type.female.name died."
                     [/message]
                 [/else]
             [/if]
@@ -216,7 +216,7 @@
                 [if]
                     [variable]
                         name=unit.name
-                        equals=$nfwe_unit_type.name
+                        equals=$nfw_unit_type.name
                     [/variable]
                     [then]
                         [message]
@@ -228,15 +228,15 @@
                     [/then]
                     [elseif]
                         [variable]
-                            name=nfwe_unit_type.female.name
+                            name=nfw_unit_type.female.name
                             equals=$nfw_empty_var
                         [/variable]
                         [then]
                             [message]
                                 speaker=$unit.id
                                 side_for=$unit.side
-                                message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-                                female_message= _ "female^$unit.name a $nfwe_unit_type.name was revived as undead."
+                                message= _ "$unit.name a $nfw_unit_type.name was revived as undead."
+                                female_message= _ "female^$unit.name a $nfw_unit_type.name was revived as undead."
                             [/message]
                         [/then]
                     [/elseif]
@@ -244,8 +244,8 @@
                         [message]
                             speaker=$unit.id
                             side_for=$unit.side
-                            message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-                            female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was revived as undead."
+                            message= _ "$unit.name a $nfw_unit_type.name was revived as undead."
+                            female_message= _ "female^$unit.name a $nfw_unit_type.female.name was revived as undead."
                         [/message]
                     [/else]
                 [/if]
@@ -285,7 +285,7 @@
                 [if]
                     [variable]
                         name=unit.name
-                        equals=$nfwe_unit_type.name
+                        equals=$nfw_unit_type.name
                     [/variable]
                     [then]
                         [message]
@@ -297,15 +297,15 @@
                     [/then]
                     [elseif]
                         [variable]
-                            name=nfwe_unit_type.female.name
+                            name=nfw_unit_type.female.name
                             equals=$nfw_empty_var
                         [/variable]
                         [then]
                             [message]
                                 speaker=$unit.id
                                 side_for=$unit.side
-                                message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-                                female_message= _ "female^$unit.name a $nfwe_unit_type.name returned as a ghost."
+                                message= _ "$unit.name a $nfw_unit_type.name returned as a ghost."
+                                female_message= _ "female^$unit.name a $nfw_unit_type.name returned as a ghost."
                             [/message]
                         [/then]
                     [/elseif]
@@ -313,8 +313,8 @@
                         [message]
                             speaker=$unit.id
                             side_for=$unit.side
-                            message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-                            female_message= _ "female^$unit.name a $nfwe_unit_type.female.name returned as a ghost."
+                            message= _ "$unit.name a $nfw_unit_type.name returned as a ghost."
+                            female_message= _ "female^$unit.name a $nfw_unit_type.female.name returned as a ghost."
                         [/message]
                     [/else]
                 [/if]
@@ -336,7 +336,7 @@
                 [if]
                     [variable]
                         name=unit.name
-                        equals=$nfwe_unit_type.name
+                        equals=$nfw_unit_type.name
                     [/variable]
                     [then]
                         [message]
@@ -348,15 +348,15 @@
                     [/then]
                     [elseif]
                         [variable]
-                            name=nfwe_unit_type.female.name
+                            name=nfw_unit_type.female.name
                             equals=$nfw_empty_var
                         [/variable]
                         [then]
                             [message]
                                 speaker=$unit.id
                                 side_for=$unit.side
-                                message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-                                female_message= _ "female^$unit.name a $nfwe_unit_type.name was converted by the enemy."
+                                message= _ "$unit.name a $nfw_unit_type.name was converted by the enemy."
+                                female_message= _ "female^$unit.name a $nfw_unit_type.name was converted by the enemy."
                             [/message]
                         [/then]
                     [/elseif]
@@ -364,8 +364,8 @@
                         [message]
                             speaker=$unit.id
                             side_for=$unit.side
-                            message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-                            female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was converted by the enemy."
+                            message= _ "$unit.name a $nfw_unit_type.name was converted by the enemy."
+                            female_message= _ "female^$unit.name a $nfw_unit_type.female.name was converted by the enemy."
                         [/message]
                     [/else]
                 [/if]
@@ -390,7 +390,7 @@
                         [if]
                             [variable]
                                 name=unit.name
-                                equals=$nfwe_unit_type.name
+                                equals=$nfw_unit_type.name
                             [/variable]
                             [then]
                                 [message]
@@ -402,15 +402,15 @@
                             [/then]
                             [elseif]
                                 [variable]
-                                    name=nfwe_unit_type.female.name
+                                    name=nfw_unit_type.female.name
                                     equals=$nfw_empty_var
                                 [/variable]
                                 [then]
                                     [message]
                                         speaker=$unit.id
                                         side_for=$unit.side
-                                        message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
-                                        female_message= _ "female^$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+                                        message= _ "$unit.name a $nfw_unit_type.name was consumed by the enemy."
+                                        female_message= _ "female^$unit.name a $nfw_unit_type.name was consumed by the enemy."
                                     [/message]
                                 [/then]
                             [/elseif]
@@ -418,8 +418,8 @@
                                 [message]
                                     speaker=$unit.id
                                     side_for=$unit.side
-                                    message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
-                                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was consumed by the enemy."
+                                    message= _ "$unit.name a $nfw_unit_type.name was consumed by the enemy."
+                                    female_message= _ "female^$unit.name a $nfw_unit_type.female.name was consumed by the enemy."
                                 [/message]
                             [/else]
                         [/if]
@@ -463,7 +463,7 @@
                 [if]
                     [variable]
                         name=unit.name
-                        equals=$nfwe_unit_type.name
+                        equals=$nfw_unit_type.name
                     [/variable]
                     [then]
                         [message]
@@ -475,15 +475,15 @@
                     [/then]
                     [elseif]
                         [variable]
-                            name=nfwe_unit_type.female.name
+                            name=nfw_unit_type.female.name
                             equals=$nfw_empty_var
                         [/variable]
                         [then]
                             [message]
                                 speaker=$unit.id
                                 side_for=$unit.side
-                                message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
-                                female_message= _ "female^$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+                                message= _ "$unit.name, a $nfw_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+                                female_message= _ "female^$unit.name, a $nfw_unit_type.name, was captured by the enemy. You will have to pay a ransom."
                             [/message]
                         [/then]
                     [/elseif]
@@ -491,8 +491,8 @@
                         [message]
                             speaker=$unit.id
                             side_for=$unit.side
-                            message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
-                            female_message= _ "female^$unit.name, a $nfwe_unit_type.female.name, was captured by the enemy. You will have to pay a ransom."
+                            message= _ "$unit.name, a $nfw_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+                            female_message= _ "female^$unit.name, a $nfw_unit_type.female.name, was captured by the enemy. You will have to pay a ransom."
                         [/message]
                     [/else]
                 [/if]
@@ -525,7 +525,7 @@
                         [if]
                             [variable]
                                 name=unit.name
-                                equals=$nfwe_unit_type.name
+                                equals=$nfw_unit_type.name
                             [/variable]
                             [then]
                                 [message]
@@ -537,23 +537,23 @@
                             [/then]
                             [elseif]
                                 [variable]
-                                    name=nfwe_unit_type.female.name
+                                    name=nfw_unit_type.female.name
                                     equals=$nfw_empty_var
                                 [/variable]
                                 [then]
                                     [message]
                                         speaker=$unit.id
                                         side_for=$unit.side
-                                        message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                                        female_message= _ "female^$unit.name a $nfwe_unit_type.name was destroyed."
+                                        message= _ "$unit.name a $nfw_unit_type.name was destroyed."
+                                        female_message= _ "female^$unit.name a $nfw_unit_type.name was destroyed."
                                     [/message]
                                 [/then]
                                 [else]
                                     [message]
                                         speaker=$unit.id
                                         side_for=$unit.side
-                                        message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                                        female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was destroyed."
+                                        message= _ "$unit.name a $nfw_unit_type.name was destroyed."
+                                        female_message= _ "female^$unit.name a $nfw_unit_type.female.name was destroyed."
                                     [/message]
                                 [/else]
                             [/elseif]
