Actualizada variable en traducción

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -265,7 +265,7 @@
             [/message]
         [/case]
         [case]
-            # po: For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
+            # For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
             value=15_A_New_Land
             [message]
                 speaker=narrator
