Po directive fixed

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -265,10 +265,10 @@
             [/message]
         [/case]
         [case]
-            # For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
             value=15_A_New_Land
             [message]
                 speaker=narrator
+                # po: For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
                 message= _ "<b><i>Non-Fatal Wounds</i></b> modification does not affect the objectives for this scenario. The unit can survives, but still triggers the same events as if it died."
                 image="misc/nfw-icon.png"
             [/message]
