LOTI C04S03 store on prevamp_store

--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -79,7 +79,6 @@
     {CLEAR_VARIABLE nfw_kill_stranded}
     {CLEAR_VARIABLE nfw_disabled}
     {CLEAR_VARIABLE healed_unit}
-    {CLEAR_VARIABLE nfw_alive_units}
 [/event]
 
 [event]
@@ -672,7 +671,7 @@ This does not apply to any unit that the objectives require you to keep alive. E
             [/if]
         [/do]
     [/foreach]
-    {CLEAR_VARIABLE nfw_wounded}
+    {CLEAR_VARIABLE nfw_wounded,nfw_alive_units}
 [/event]
 
 #ifdef LOTI_1_OR_2
