--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -945,6 +945,56 @@
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Raised" {NFW_COLOR_RED}}
     {VARIABLE nfw_already_wound yes}
 [/event]
+
+# On this scenario all surviving and wounded units from side 1 are saved in prevamp_store instead of normal way
+[event]
+    name=prestart
+    id=nfw_loti_revolution
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 03_Revolution_Begins}
+    [/filter_condition]
+    [remove_event]
+        id=nfw_victory_unstore
+    [/remove_event]
+[/event]
+
+[event]
+    name=victory
+    id=nfw_loti_prevamp_store
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 03_Revolution_Begins}
+    [/filter_condition]
+    [foreach]
+        array=nfw_wounded
+        [do]
+            {VARIABLE this_item.hitpoints $this_item.max_hitpoints}
+            {VARIABLE this_item.status.poisoned "no"}
+            {VARIABLE this_item.status.slowed "no"}
+            [if]
+                [variable]
+                    name=this_item.side
+                    equals=1
+                [/variable]
+                [then]
+                    [set_variables]
+                        name=prevamp_store
+                        mode=append
+                        to_variable=this_item
+                    [/set_variables]
+                [/then]
+                [else]
+                    [unstore_unit]
+                        variable=this_item
+                        x,y=recall,recall
+                        advance=no
+                    [/unstore_unit]
+                [/else]
+            [/if]
+        [/do]
+    [/foreach]
+    {CLEAR_VARIABLE nfw_wounded,nfw_alive_units}
+[/event]
+
 #endif
 
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
