Filtered doppelgangers and Delly

--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -143,6 +143,9 @@
                 [/not]
             [/or]
             [or]
+                type=Lethalia_doppelganger,Efraim_doppelganger,TLU_DharmaRashti,TLU_HoRashti,TLU_True_Rashti,TLU_HoRashti
+            [/or]
+            [or]
                 ability=necromancy
                 [not]
                     race=undead
@@ -151,11 +154,6 @@
                     race=black soul-loti
                 [/not]
             [/or]
-#ifdef CAMPAIGN_TO_LANDS_UNKNOWN
-            [or]
-                type=TLU_DharmaRashti,TLU_HoRashti,TLU_True_Rashti,TLU_HoRashti
-            [/or]
-#endif
         [/not]
     [/filter]
 
