--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -946,6 +946,32 @@
     {VARIABLE nfw_already_wound yes}
 [/event]
 
+[event]
+    name=last_breath
+    id=nfwm_doppelganger
+    first_time_only=no
+    [filter]
+        type=Lethalia_doppelganger,Efraim_doppelganger
+    [/filter]
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Disipated" {NFW_COLOR_RED}}
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
+[event]
+    name=last_breath
+    id=nfw_delly_killed
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 07_Nemesis}
+    [/filter_condition]
+    [filter]
+        type=Delly_lich
+    [/filter]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Death" {NFW_COLOR_RED}}
+    {VARIABLE nfw_already_wound yes}
+    {VARIABLE nfw_exclude_unit_id $unit.id}
+[/event]
+
 # On this scenario all surviving and wounded units from side 1 are saved in prevamp_store instead of normal way
 [event]
     name=prestart
@@ -994,7 +1020,6 @@
     [/foreach]
     {CLEAR_VARIABLE nfw_wounded,nfw_alive_units}
 [/event]
-
 #endif
 
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
